Fix a white space property in tooltip

--- a/src/definitions/modules/popup.less
+++ b/src/definitions/modules/popup.less
@@ -107,7 +107,7 @@
   position: absolute;
   text-transform: none;
   text-align: left;
-  white-space: nowrap;
+  white-space: normal;
 
   font-size: @tooltipFontSize;
 
